# Prob-Horizon

./: README.md  README_EN.md  main.py  pyproject.toml
src/: __init__.py
src/components/: clt_simulator_ui.py  distribution_explorer_ui.py
src/utils/: clt_simulator.py  distribution_explorer.py
tests/: test_clt_simulator.py  test_distribution_explorer.py
