[project]
name = "prob-horizon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
